@@ -1,3 +1,7 @@
+2005-06-28 Alain Magloire
+	Fix PR 94612: addr =<PENDING>
+	* mi/org/eclipse/cdt/debug/mi/core/MIFormat.java
+
 2005-06-27 Alain Magloire
 	New command from newer version of gdb "set breakpoint pending"
 	better handling of the breakpoint while the target is running.
